# filetic

./: .clang-format  .gitignore  CMakeLists.txt  README.md
Commands/: buildTest.bat  buildTime.bat  runCommand.bat
Commands/Make/: config.bat  configDebug.bat  configRelease.bat
Commands/Ninja/: configDebug.bat  configRelease.bat  configTestDebug.bat
code_generation/: CMakeLists.txt
code_generation/lib/metacgen/: metacgen.c  metacgen.h
code_generation/src/: array_gen.h  hash_table_gen.h  main.c  set_gen.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/math/: ftic_math.h
lib/stb/: stb_image_resize2.c
remedy/: rem.rdbg
res/shaders/: font_fragment.glsl  fragment.glsl  fragment_blur.glsl  fragment_horizontal_blur.glsl  fragment_vertical_blur.glsl  vertex.glsl  vertex3d.glsl
saved/: application.txt  quick_access.txt  recent.txt  ui_layout.txt
src/: application.c  application.h  array.h  buffers.c  buffers.h  camera.c  camera.h  collision.c  collision.h  define.h  directory.c  directory.h  event.c  event.h  font.c  font.h  ftic_guid.c  ftic_guid.h  ftic_window.c  ftic_window.h  globals.c  globals.h  hash.c  hash.h  hash_table.c  hash_table.h  logging.c  logging.h  main.c  object_load.c  object_load.h  opengl_util.c  opengl_util.h  particle_system.c  particle_system.h  random.c  random.h  rendering.c  rendering.h  set.c  (+13 more)
src/math/: ftic_math.c  ftic_math.h
src/platform/: platform.h  platform_windows.c
src/platform/windows/: platform_windows.c
test/: CMakeLists.txt  asserts.h  event_di.c  event_di.h  main.c  rbg.rdbg  ui_test.c  ui_test.h
test/src/: asserts.h  collision_test.c  collision_test.h  event_di.h  main.c  ui_test.c  ui_test.h
